# chainsafe-substrate-node-template

./: README.md
.github/workflows/: build-specs.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  command_helper.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
